formulaires design of sign in

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -71,6 +71,10 @@
   margin-bottom: 40px;
 }
 
+.margin-top-xs {
+  margin-top: 17px;
+}
+
 // Paddings
 
 .padded {
@@ -156,4 +160,9 @@
   background: #3b5998;
 }
 
+// Height & Width
+.form-height-width-small {
+  height: 450px;
+  width: 400px;
+}
 
