--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,23 +1,3 @@
-.banner-height-sm h2 {
-  color: white;
-  position: relative;
-  top: 45px;
-}
-
-.banner-height-sm.col-xs-12 {
-  padding: 0;
-}
-
-@media (max-width: $screen-xs-max) {
- .banner-height-sm {
-    height: 264px;
-
-    h2 {
-      top: 0;
-    }
-  }
-}
-
 .background-form {
   color: $gray;
   display:flex;
@@ -25,18 +5,27 @@
   padding:30px;
   margin: 0 auto;
   width:100%;
-  height:auto;
+  height:100%;
   font-size:em(14px);
-  background: white;
   z-index: 900;
+  position: relative;
+  border: 2px solid #EAEBEF;
+  background: white;
+  // background: rgba(0, 0, 0, 0.25);
+}
+
+.top-left-form {
+  top: 20px;
+  left: 20px;
 }
 
 .border-form {
-  position: relative;
-  border: 3px solid $gray;
-  // form {
-  //   position: absolute;
-  //   left: -20px;
-  //   bottom: -20px;
-  // }
+  position: absolute;
+  // border: 3px solid #EAEBEF;
+  z-index: 600;
+}
+
+.background-marbre {
+  background-size: cover !important;
+  background-image: url('marbre.jpg');
 }
