--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -82,7 +82,7 @@
                               <div class="upper-line-left"><hr></div>
                               <h6 class="txt-light"><%= humanized_money_with_symbol(wksp.price)%>/day</h6>
                               <div class="upper-line-left"><hr></div>
-                              <h6 class="txt-light"><%= %></h6>
+                              <h6 class="txt-light"><%= wksp.craftman.locality %></h6>
                             </div>
                           </div>
                         </div>
