formulaires design sign up

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -75,6 +75,10 @@
   margin-top: 17px;
 }
 
+.margin-top-sm {
+  margin-top: 22px;
+}
+
 // Paddings
 
 .padded {
@@ -164,5 +168,10 @@
 .form-height-width-small {
   height: 450px;
   width: 400px;
+}
+
+.form-height-width-md {
+  height: 480px;
+  width: 430px;
 }
 
