--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -9,7 +9,6 @@
   font-size:em(14px);
   z-index: 900;
   position: relative;
-  border: 2px solid #EAEBEF;
   background: white;
   // background: rgba(0, 0, 0, 0.25);
 }
@@ -17,6 +16,10 @@
 .top-left-form {
   top: 20px;
   left: 20px;
+}
+.bottom-left-form {
+  bottom: 12px;
+  left: 17px;
 }
 
 .border-form {
@@ -28,4 +31,23 @@
 .background-marbre {
   background-size: cover !important;
   background-image: url('marbre.jpg');
+}
+.border-marbre {
+  border: 2px solid #EAEBEF;
+}
+
+.background-tissu {
+  background-size: cover;
+  background-image: url('fabric_univers.jpg');
+}
+.border-tissu {
+  border: 2px solid #D8B08B;
+}
+
+.background-glass {
+  background-size: cover;
+  background-image: url('glass_univers.jpg');
+}
+.border-glass {
+  border: 2px solid #C1D1E1;
 }
