--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -164,7 +164,7 @@
   background: #3b5998;
 }
 
-// Height & Width
+// Height & Width formulaires
 .form-height-width-small {
   height: 450px;
   width: 400px;
@@ -175,3 +175,7 @@
   width: 430px;
 }
 
+.form-height-width-xs {
+  height: 440px;
+  width: 440px;
+}
