--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -63,3 +63,11 @@
 .border-metal {
   border: 2px solid #8A846C;
 }
+
+.background-color {
+  background-size: cover;
+  background-image: url('glass.jpg');
+}
+.border-color {
+  border: 2px solid #CE9FC2;
+}
