--- a/app/views/workshops/_form.html.erb
+++ b/app/views/workshops/_form.html.erb
@@ -19,7 +19,9 @@
               <%= f.input :price %>
               <%= f.input :photos, as: :attachinary %>
 
+              <div class="form-actions text-center">
               <%= f.button :submit %>
+              </div>
             <% end %>
           </div>
         </div>
