--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -21,7 +21,7 @@
         <h2 class="roboto"><%= @workshop.title %></h2>
         <div class="txt-light padded-top-xs">by <%= @craftman.first_name %> <%= @craftman.last_name.capitalize %></div>
 
-        <div class="txt-light"> <%= link_to "#{@workshop.universe.name}", universe_path(@workshop.universe), class: "text-uppercase" %> > <%= link_to "#{@workshop.craftman.job.name}", universe_path(@workshop.universe) %> </div>
+        <div class="txt-light"> <%= link_to "#{@workshop.universe.name}", universe_path(@workshop.universe), class: "text-uppercase" %> > <%= link_to "#{@workshop.craftman.job.name}", universe_workshops_path(@workshop.universe, anchor: @workshop.craftman.job.name) %> </div>
       </div>
       <div class="right">
         <%= link_to "Contact the artisan", new_workshop_message_path(@workshop), class: "btn btn-default" %>
