--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -142,6 +142,9 @@
 .padding-left-xl {
   padding-left: 100px;
 }
+.padding-left-xs {
+  padding-left: 10px;
+}
 
 .padded-full-lg {
   padding: 40px;
