--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -158,11 +158,11 @@
       </div>
       <div class="col-xs-6 col-md-6">
         <div class="padded-top-xl">
-          <div class="craftman-presentation one">
+          <div class="craftman-presentation one padding-left-xs">
             <!-- description -->
             <p><%= @first_craftman.description %></p>
           </div>
-          <div class="left-surlign <%= @universe.code %> craftman-presentation two">
+          <div class="left-surlign <%= @universe.code %> craftman-presentation two padding-left-xs">
             <!-- suite text de la description -->
             <%= @first_craftman.second_description %>
           </div>
