--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,13 +1,17 @@
-<br>
+
 <!-- NE SURTOUT PAS CHANGER LES CLASS -->
-<div class="chat_window">
-  <ul class="messages" id="messages">
-    <% @messages.each do |message| %>
-      <%= render "messages/show", message: message %>
-    <% end %>
-  </ul>
-  <div class="bottom_wrapper clearfix">
-    <%= render 'messages/form', workshop: @workshop, message: @message %>
+<div class="container">
+  <div class="row">
+    <div class="chat_window col-xs-12 col-md-10 col-md-offset-1">
+      <ul class="messages" id="messages">
+        <% @messages.each do |message| %>
+          <%= render "messages/show", message: message %>
+        <% end %>
+      </ul>
+      <div class="bottom_wrapper clearfix">
+        <%= render 'messages/form', workshop: @workshop, message: @message %>
+      </div>
+    </div>
   </div>
 </div>
 
