--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -93,13 +93,13 @@
 <!-- JOBS -->
 <div class="container-fluid">
   <div class="row">
-    <div class="universe <%= @universe.code %> job padded-top-md">
-      <div class="col-xs-10 col-xs-offset-1">
-        <div class="color-line-title-<%= @universe.code %>">
+    <div class="universe <%= @universe.code %> job">
+      <div class="col-xs-10 col-xs-offset-2">
+        <div class="color-line-title-<%= @universe.code %> padded-top-lg">
           <hr>
         </div>
-        <h2><%= @universe.name %></h2>
-        <h2 class="padding-left-xl">jobs</h2>
+        <h2 class="padded-bottom-lg"><%= @universe.name %> jobs</h2>
+        <!-- <h2 class="padding-left-xl">jobs</h2> -->
       </div>
     </div>
   </div>
@@ -127,13 +127,13 @@
 <!-- CRAFTMEN -->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-      <div class="universe <%= @universe.code %> job padded-top-md">
-        <div class="color-line-title-<%= @universe.code %>">
+    <div class="col-xs-10 col-xs-offset-2">
+      <div class="universe <%= @universe.code %>">
+        <div class="color-line-title-<%= @universe.code %> padded-top-lg">
           <hr>
         </div>
-        <h2>Meet ours</h2>
-        <h2 class="padding-left-xl">craftmen</h2>
+        <h2 class="padded-bottom-lg">Meet ours craftsman</h2>
+        <!-- <h2 class="padding-left-xl">craftmen</h2> -->
       </div>
     </div>
   </div>
@@ -142,7 +142,7 @@
 <!-- Artisan #1 -->
 <div class="container-fluid">
   <div class="row">
-    <div class="padded universe craftman">
+    <div class="padded-top-md universe craftman">
       <div class="col-xs-12 col-md-4 col-md-offset-2  ">
         <div class="presentation-pic">
           <div class="name-one">
@@ -157,7 +157,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="padded-top-xl">
+        <div class="padded-top-xl padded-top-xl-sm-min">
           <div class="craftman-presentation one padding-left-xs">
             <!-- description -->
             <p><%= @first_craftman.description %></p>
@@ -174,7 +174,7 @@
   <!-- Artisan #2 -->
 <div class="container-fluid">
   <div class="row">
-    <div class="padded universe craftman">
+    <div class="padded-top-xl padding-top-xs-min-medium universe craftman">
       <div class="col-xs-12 col-md-4 col-md-offset-2">
         <div>
           <div class="craftman-presentation three">
@@ -205,7 +205,7 @@
   <!-- Artisan #3 -->
 <div class="container-fluid">
   <div class="row">
-    <div class="padded-top-xs universe craftman">
+    <div class="padded-top-ld universe craftman padding-top-xs-min">
       <div class="col-xs-12 col-md-4 col-md-offset-2">
         <div class="presentation-pic">
           <div class="name-three">
@@ -220,8 +220,8 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="padded-top-xl">
-          <div class="craftman-presentation one padding-left-xs">
+        <div class="padded-top-xl padded-top-xl-sm-min">
+          <div class="craftman-presentation one padding-left-xs paddind-top-xs-min-small">
             <!-- texte de présentation -->
             <p><%= @third_craftman.description %></p>
           </div>
