--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -44,17 +44,22 @@ width: 100px;
 .dash_item {
 width: 100%;
 height:100%;
-border: 1px solid #cac9d1;
-margin-top: 10px;
-margin-bottom: 10px;
+border-top: 1px solid #cac9d1;
 padding-top: 10px;
 padding-left: 20px;
 padding-right: 20px;
-box-shadow: 1px 1px 2px #cac9d1;
-border-radius: 2px;
 position: relative;
 }
 
+.dash_item:hover {
+background-color: #FAFAFA;
+width: 100%;
+height:100%;
+border-top: 1px solid #cac9d1;
+padding-top: 10px;
+padding-left: 20px;
+padding-right: 20px;
+}
 // tests sur la card
 .green-circle {
   background: #5cb85c;
@@ -85,26 +90,21 @@ margin-bottom: 50px;
 color: $gray;
 font-size: 16px;
 }
-
 .image-card {
   position: relative;
   width: 100%;
 }
-
 .text-in-card {
  position: absolute;
  left: 100px;
  top: 60px;
  color: white;
 }
-
 .no-padding {
   padding: 0;
   margin: 0;
 }
-.affix {
-      top: 20px;
-  }
+
 
 
 
