--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -10,9 +10,10 @@
 <div class="container">
   <div class="row">
 
+
         <!-- first column  -->
-        <div class="col-xs-12 col-sm-4 padded-top-md " >
-          <div data-spy="affix" data-offset-top="197">
+        <div class="col-xs-12 col-sm-4 padded-top-md ">
+          <div class="container-pic">
             <div class="text-center dashboard-pictures">
             <!-- profil pic bloc  -->
               <%= image_tag 'marbre.jpg', height: 150, width: 150, crop: :fill, class: "marble" %>
@@ -38,8 +39,9 @@
                <%= link_to "Edit profile", edit_profile_path, class: "btn btn-default margin-md" %>
             </div>
           </div>
-
         </div>
+
+
 
         <!-- Second column  -->
         <div class="col-xs-12 col-sm-8">
@@ -55,19 +57,21 @@
 
                       <% @user.bookings.all.each_with_index do |booking, index| %>
                         <%= link_to edit_booking_path(booking) do %>
-                        <div class="dash_item padded-sm quotation-text btn btn-default">
+                        <div class="dash_item padded-sm quotation-text">
                           <div class="row">
 
                             <div class="col-xs-1">
                               <%= "##{index + 1}" %>
                             </div>
 
-                            <div class="col-xs-5">
-                              <%= "#{booking.workshop.title}, from #{booking.workshop.craftman.first_name}"
+                            <div class="col-xs-7">
+                              <%= "for : #{booking.workshop.title}"
+                              %>
+                              <%= "/ from #{booking.workshop.craftman.first_name}"
                               %>
                             </div>
 
-                            <div class="col-xs-2 quotation-text text-right no-padding">
+                            <div class="col-xs-3 quotation-text text-right no-padding">
                               <% if booking.status == "submitted" %>
                                 <p>pending</p>
                               <% elsif booking.status == "accepted" %>
