--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,4 +1,4 @@
-
+// Workshops#show
  .workshop-card {
   position: absolute;
   padding: 30px 0px 0px 0px;
@@ -23,27 +23,31 @@
   padding-top: 60px;
   float: right;
 }
+
+// Home
 .card-universe {
-  height: 275px;
-  position: relative;
+  // height: 300px;
+  // width: 100%;
+  // position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
   margin-bottom: 30px;
 }
 .card-universe-title {
   text-decoration: none;
-  font-family: 'Vidaloka', serif;
+  font-family: Asul;
   font-size: 40px;
   color: white;
 }
 .card-universe-title hover {
   text-decoration: none;
-  font-family: 'Vidaloka', serif;
+  font-family: Asul;
   font-size: 40px;
   color: white;
 }
+
+// Workshops#index
 .card-index {
   background-size: cover !important;
   height: 500px;
