--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src="js/modernizr.custom.js"></script>
   </head>
   <body>
     <%= render 'shared/flashes' %>
@@ -23,5 +24,6 @@
     <%= cloudinary_js_config %>
 
     <%= yield(:after_js) %>
+    <script src="js/toucheffects.js"></script>
   </body>
 </html>
