--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -73,3 +73,20 @@
   background-image: linear-gradient(#5B7BD5, #4864B1);
   color: white;
 }
+
+.btn-default {
+  background: #152729;
+  border-bottom: 3px solid #040707;
+  border-radius: 0;
+  border-style: solid;
+  border-width: 0;
+  margin: 0 0 1.25rem;
+  padding: 1rem 2rem 1.0625rem;
+  color: #FFF;
+
+}
+.btn-default:hover {
+  color: #FFF;
+  opacity: 0.95;
+  background: #152729;
+}
