--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -84,7 +84,7 @@
                               <div class="upper-line-left"><hr></div>
 
                               <h6 class="txt-light"><%= wksp.craftman.locality %></h6>
-                              
+
                             </div>
                           </div>
                         </div>
@@ -164,7 +164,7 @@
 
                       <% @user.bookings.all.each_with_index do |booking, index| %>
                         <%= link_to edit_booking_path(booking) do %>
-                        <div class="dash_item padded-sm quotation-text btn btn-default">
+                        <div class="dash_item padded-sm quotation-text btn ">
                           <div class="row">
 
                             <div class="col-xs-1">
