ajut commentaire là ou j'ai suppromé la classe btn-default sur le html du dashboard user

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -164,7 +164,7 @@
 
                       <% @user.bookings.all.each_with_index do |booking, index| %>
                         <%= link_to edit_booking_path(booking) do %>
-                        <div class="dash_item padded-sm quotation-text btn ">
+                        <div class="dash_item padded-sm quotation-text btn "> <!-- J'ai enlevé ici le btn-default -->
                           <div class="row">
 
                             <div class="col-xs-1">
