--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -49,6 +49,7 @@ padding-top: 10px;
 padding-left: 20px;
 padding-right: 20px;
 position: relative;
+text-decoration: none;
 }
 
 .dash_item:hover {
@@ -59,6 +60,7 @@ border-top: 1px solid #cac9d1;
 padding-top: 10px;
 padding-left: 20px;
 padding-right: 20px;
+text-decoration: none;
 }
 // tests sur la card
 .green-circle {
@@ -89,6 +91,7 @@ margin-bottom: 50px;
 .quotation-text {
 color: $gray;
 font-size: 16px;
+text-decoration: none;
 }
 .image-card {
   position: relative;
