--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -57,7 +57,7 @@
 
                       <% @user.bookings.all.each_with_index do |booking, index| %>
                         <%= link_to edit_booking_path(booking) do %>
-                        <div class="dash_item padded-sm quotation-text">
+                        <div class="dash_item padded-sm quotation-text txt-light">
                           <div class="row">
 
                             <div class="col-xs-1">
@@ -71,7 +71,7 @@
                               %>
                             </div>
 
-                            <div class="col-xs-3 quotation-text text-right no-padding">
+                            <div class="col-xs-3 quotation-text text-right no-padding txt-light">
                               <% if booking.status == "submitted" %>
                                 <p>pending</p>
                               <% elsif booking.status == "accepted" %>
@@ -114,16 +114,17 @@
                 <h4 class="txt-md txt-heavy no-margin-top">messages</h4>
 
                  <% if @threads == nil %>
-                    <div class="quotation_item">
+                    <div class="quotation_item padded-sm quotation-text txt-light">
                       <p class="txt-light">No conversation yet</p>
                     </div>
                  <% else %>
                     <% @threads.each do |(workshop, user), message| %>
-                    <div class="dash_item">
-                      <p>
-                      <%= link_to "#{workshop.title} with #{workshop.craftman.first_name}", workshop_messages_path(workshop) %>
-                      </p>
-                    </div>
+                      <%= link_to workshop_messages_path(workshop, user) do %>
+                        <div class="dash_item padded-sm quotation-text txt-light">
+                          <%= "#{workshop.title} with #{workshop.craftman.first_name}"
+                          %>
+                        </div>
+                      <% end %>
                     <% end %>
                  <% end %>
 
@@ -151,7 +152,7 @@
                       <div class="col-xs-5 col-sm-5">
                       <!-- photo  -->
                         <div class="image-card padded-top-xs padded-bottom-xs">
-                          <%= cl_image_tag wksp.photos.first, height: 155, width: 240, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
+                          <%= cl_image_tag wksp.photos.first, height: 175, width: 240, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
                         </div>
                         <p class="text-in-card text-center"><%= wksp.craftman.first_name %> </p>
                         <p class="text-in-card text-center"><br><%= wksp.craftman.last_name %></p>
@@ -161,7 +162,7 @@
                       <div class="col-xs-5 col-sm-5">
                       <!-- infos in the middle  -->
                         <h2 class="card-title txt-description padded-top-xs padded-bottom-xs"><%= wksp.title %></h2>
-                        <p class="txt-sm"><%= truncate(wksp.description, length: 140, separator: '.') %></p>
+                        <p class="txt-sm padded-sm"><%= truncate(wksp.description, length: 140, separator: '.') %></p>
                         <div class="row">
                           <div class="col-xs-4 col-sm-4">
                             <div class="upper-line"><hr></div>
