--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -152,10 +152,11 @@
                       <div class="col-xs-5 col-sm-5">
                       <!-- photo  -->
                         <div class="image-card padded-top-xs padded-bottom-xs">
-                          <%= cl_image_tag wksp.photos.first, height: 175, width: 240, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
+                          <%= cl_image_tag wksp.photos.first, height: 175, width: "100%", crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
+                            <p class="flex-card-1"><%= wksp.craftman.first_name %> </p>
+                            <p class="flex-card-2"><%= wksp.craftman.last_name %></p>
                         </div>
-                        <p class="text-in-card text-center"><%= wksp.craftman.first_name %> </p>
-                        <p class="text-in-card text-center"><br><%= wksp.craftman.last_name %></p>
+
                       </div>
 
 
