--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -22,12 +22,14 @@
     position: absolute;
     bottom: -300px;
   }
-  img {
-    position: absolute;
-    width: 50%;
-    height: 60%;
-    top: 350px;
-  }
+}
+.adaptation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 500px;
+  left: 0%;
 }
 
 //UNIVERSE INSPIRATION
