--- a/app/assets/stylesheets/pages/_workshop.scss
+++ b/app/assets/stylesheets/pages/_workshop.scss
@@ -17,13 +17,17 @@
   margin-top: 200px;
 }
 
+.link-back:hover {
+  font-weight: 400;
+}
+
 // TRAIT
 // .trait {
 //   border: 1px solid $gray;
 // }
 
 .vertical-lines0 {
-  width: 4px;
+  width: 6px;
   height: 0;
   background-color: $gold1;
   animation-name: vertical-linezero;
@@ -32,8 +36,8 @@
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
   position: fixed;
-  left: 17.7%;
-  top: 375px;
+  left: 15%;
+  top: 425px;
   transform: translate(-50%);
 }
 
@@ -43,11 +47,11 @@
   }
   50%{
     height: 100%;
-    left: 17.7%;
+    left: 15%;
   }
   100% {
     height: 24%;
-    left: 17.7%;
+    left: 15%;
   }
 }
 
