align text and image craftmen

--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -28,7 +28,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  top: 500px;
+  top: 420px;
   left: 0%;
 }
 
@@ -162,6 +162,10 @@
   .paddind-top-xs-min-small {
     padding-top: 20px;
   }
+}
+
+.padded-top-btstrap {
+  padding-top: 90px;
 }
 
 
