--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -11,7 +11,7 @@
           <div class="col-xs-12 col-xs-offset-2 col-sm-offset-2 col-md-6">
             <h1><%= @universe.name.upcase %></h1>
           </div>
-          <div class="col-xs-12 col-xs-offset-2 col-md-6 col-md-offset-6">
+          <div class="col-xs-12 col-xs-offset-1 col-md-6 col-md-offset-6">
             <h5>
             <!-- @universe.slug -->
               <%= @universe.description %>
@@ -23,7 +23,7 @@
           <div class="col-xs-12">
             <div class="universe adaptation">
               <!-- photo -->
-              <%= cl_image_tag @universe.banner_bottom.path, :height=>300, :width=>500, crop: :crop %>
+              <%= cl_image_tag @universe.banner_bottom.path, :height=>350, :width=>600, crop: :crop %>
             </div>
           </div>
         </div>
@@ -143,6 +143,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="padded-top-md universe craftman">
+
       <div class="col-xs-12 col-md-4 col-md-offset-2  ">
         <div class="presentation-pic">
           <div class="name-one">
@@ -157,7 +158,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="padded-top-xl padded-top-xl-sm-min">
+        <div class="padded-top-btstrap padded-top-xl-sm-min">
           <div class="craftman-presentation one padding-left-xs txt-light">
             <!-- description -->
             <p><%= @first_craftman.description %></p>
@@ -202,6 +203,7 @@
       </div>
     </div>
   </div>
+
   <!-- Artisan #3 -->
 <div class="container-fluid">
   <div class="row">
@@ -220,7 +222,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <div class="padded-top-xl padded-top-xl-sm-min">
+        <div class="padded-top-btstrap padded-top-xl-sm-min">
           <div class="craftman-presentation one padding-left-xs paddind-top-xs-min-small txt-light">
             <!-- texte de présentation -->
             <p><%= @third_craftman.description %></p>
