resize some image and text alignment

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -144,7 +144,7 @@
   <div class="row">
     <div class="padded-top-md universe craftman">
 
-      <div class="col-xs-12 col-md-4 col-md-offset-2  ">
+      <div class="col-xs-12 col-xs-offset-2  col-md-4 col-md-offset-2  ">
         <div class="presentation-pic">
           <div class="name-one">
             <!-- introduire en ruby first_name et last_name du craftman -->
@@ -153,7 +153,7 @@
           </div>
           <div class="picture-one">
             <!-- photo du craftman -->
-            <%= cl_image_tag craftman_avatar(@first_craftman), width: 220, height: 220, crop: :full %>
+            <%= cl_image_tag craftman_avatar(@first_craftman), width: 240, height: 240, crop: :fill %>
           </div>
         </div>
       </div>
@@ -188,11 +188,11 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-5 col-md-offset-1">
+      <div class="col-xs-12 col-xs-offset-2 col-md-5 col-md-offset-1">
         <div class="presentation-pic">
           <div class="picture-two">
             <!-- photo du craftman -->
-            <%= cl_image_tag craftman_avatar(@second_craftman), width: 220, height: 220, crop: :fill %>
+            <%= cl_image_tag craftman_avatar(@second_craftman), width: 240, height: 240, crop: :fill %>
           </div>
           <div class=" name-two bottom-surlign <%= @universe.code %>">
             <!-- introduire en ruby le nom du craftman -->
@@ -208,7 +208,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="padded-top-ld universe craftman padding-top-xs-min">
-      <div class="col-xs-12 col-md-4 col-md-offset-2">
+      <div class="col-xs-12 col-xs-offset-2 col-md-4 col-md-offset-2">
         <div class="presentation-pic">
           <div class="name-three">
             <!-- introduire en ruby le nom du craftman -->
