--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -20,7 +20,7 @@
         <div class="col-xs-12 col-sm-4">
           <div class="card-index">
             <div class="card-img">
-              <%= cl_image_tag workshop_avatar(wksp), height: 150, width: 358, crop: :fill %>
+              <%= cl_image_tag workshop_avatar(wksp), height: 150, width: 358, crop: :fill, style: "background: rgba(0.3,36,61,0.9)" %>
               <div class="col-xs-12 text-center craftman-name">
                 <p class="roboto txt-gras white"><%= wksp.craftman.first_name.capitalize %></p>
                 <p class="roboto txt-gras white"><%= wksp.craftman.last_name.capitalize %></p>
