--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-4">
-        <div class="border-form margin-top-xs form-height-width-md background-glass">
+        <div class="border-form margin-top-xs form-height-width-md" style="background-size: cover !important;background-image: url('<%= image_url "glass_univers.jpg" %>');">
           <div class="background-form bottom-left-form border-glass">
 
             <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
