--- a/app/views/workshops/_form.html.erb
+++ b/app/views/workshops/_form.html.erb
@@ -9,7 +9,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-4">
-        <div class="border-form margin-top-sm form-height-width-xs background-metal">
+        <div class="border-form margin-top-sm form-height-width-xs" style="background-size: cover !important;background-image: url('<%= image_url "metal_univers.jpg" %>');">
           <div class="background-form top-right-form border-metal">
             <%= simple_form_for(@workshop) do |f| %>
               <%= f.error_notification %>
