--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -25,6 +25,12 @@
   }
 }
 
+.back-button {
+    left: 10px;
+    position: absolute;
+}
+
+/* Facebook */
 .loginBtn {
   box-sizing: border-box;
   position: relative;
@@ -56,7 +62,6 @@
 }
 
 
-/* Facebook */
 .loginBtn--facebook {
   background-color: #4C69BA;
   background-image: linear-gradient(#4C69BA, #3B55A0);
