--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -32,34 +32,34 @@
   z-index: 600;
 }
 
-.background-marbre {
-  background-size: cover !important;
-  background-image: url('marbre.jpg');
-}
+// .background-marbre {
+//   background-size: cover !important;
+//   background-image: url('marbre.jpg');
+// }
 .border-marbre {
   border: 2px solid #EAEBEF;
 }
 
-.background-glass {
-  background-size: cover;
-  background-image: url('glass_univers.jpg');
-}
+// .background-glass {
+//   background-size: cover;
+//   background-image: url('glass_univers.jpg');
+// }
 .border-glass {
   border: 2px solid #C1D1E1;
 }
 
-.background-metal {
-  background-size: cover;
-  background-image: url('metal_univers.jpg');
-}
+// .background-metal {
+//   background-size: cover;
+//   background-image: url('metal_univers.jpg');
+// }
 .border-metal {
   border: 2px solid #8A846C;
 }
 
-.background-color {
-  background-size: cover;
-  background-image: url('glass.jpg');
-}
+// .background-color {
+//   background-size: cover;
+//   background-image: url('glass.jpg');
+// }
 .border-color {
   border: 2px solid #CE9FC2;
 }
