--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -82,16 +82,21 @@
 }
 
 .card-job {
-    width: 440px;
-    height: 370px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
+  width: 440px;
+  height: 370px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+
   h3 {
     color: white;
     top: 150px;
   }
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 // CRAFTMEN
