--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <%# avatar_url = cl_image_path current_user.avatar || current_user.facebook_picture_url || "http://placehold.it/30x30" %>
 
-<div class="navbar-wagon navbar-fixed-top">
+<div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png" %>
@@ -66,11 +66,8 @@
       <!-- Login text link -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
-      <!-- Login as craftman text link -->
-      <%= link_to t(".sign_in", default: "Login as craftman"), new_craftman_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
       <!-- Button (call-to-action) -->
-      <%= link_to t(".top_call_to_action", default: "Create a workshop"), new_workshop_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+      <%= link_to t(".top_call_to_action", default: "I am a craftsman"), craftmen_dashboard_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     <% end %>
   </div>
 
@@ -79,9 +76,40 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <% if craftman_signed_in? %>
+          <li>
+            <%= link_to craftmen_dashboard_path do %>
+              <i class="fa fa-user"></i> <span>  Dashboard</span>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        <% elsif user_signed_in? %>
+          <li>
+            <%= link_to dashboard_path do %>
+              <i class="fa fa-user"></i> <span>  Dashboard</span>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to t(".sign_up", default: "Signup"), new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
+          <li>
+            <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
+
+          <li>
+            <%= link_to t(".top_call_to_action", default: "I am a craftsman"), craftmen_dashboard_path %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
