--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,7 +9,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-4">
-        <div class="border-form margin-top-sm form-height-width-small background-color">
+        <div class="border-form margin-top-sm form-height-width-small" style="background-size: cover !important;background-image: url('<%= image_url "glass.jpg" %>');">
           <div class="background-form top-left-form border-color">
             <%= simple_form_for @user, url: edit_profile_path do |f| %>
               <%= f.error_notification %>
