--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Raleway:400,100,300,700,500|Vidaloka|Roboto+Condensed:300,400,700|Asul:400,700|Chivo:300,400,700,900");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Raleway:400,100,300,700,500|Vidaloka|Roboto+Condensed:300,400,700|Asul:400,700|Chivo:300,400,700,900|Yeseva+One");
 $base-font: "Chivo", "Open Sans", "sans-serif";
-$header-font: "Asul", "Raleway", "sans-serif";
+$header-font: "Yeseva One", "Raleway", "sans-serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
