--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -22,6 +22,12 @@
     position: absolute;
     bottom: -300px;
   }
+  .btn-banner {
+    position: absolute;
+    top: 220px;
+    left: 70px;
+    width: 140px;
+  }
 }
 .adaptation {
   position: absolute;
@@ -95,6 +101,10 @@
     top: 150px;
   }
 }
+.card-job h3:hover {
+  font-size: 34px;
+  text-decoration: none;
+}
 
 // CRAFTMEN
 
@@ -110,7 +120,9 @@
   height: 110px;
   width: 350px;
 }
-
+.backcolor {
+  background-color: white;
+}
 .name-one {
   // width: 150px;
   position: relative;
